[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.8, <4.0"
bilibili-api-dev = "16.2.0b1"
skia-python = "87.5"
pycryptodomex = "3.19.1"



[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
